# PMSManageBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  db.py  docker-compose.yaml  emby.py  overseerr.py  plex.py  pyproject.toml  requirements.txt  settings.tpl.py  start.sh  tautulli.py  update_db.py  utils.py
.github/workflows/: build.yml
scripts/: migrate_line_traffic_stats.py
src/app/: cache.py  config.py  config.tpl.py  db.py  emby.py  log.py  main.py  plex.py  premium.py  redis.py  scheduler.py  update_db.py  utils.py
src/app/databases/: cache.py  db.py  db_func.py  redis.py
src/app/handlers/: db.py  emby.py  plex.py  rank.py  start.py  status.py  user.py  webapp.py
src/app/modules/: emby.py  overseerr.py  plex.py  tautulli.py  upay.py
src/app/utils/: system.py  utils.py
src/app/webapp/: __init__.py  auth.py  middlewares.py  models.py
webapp-frontend/: .env.production  .eslintrc.js  package.json
webapp-frontend/public/: index.html  manifest.json  service-worker.js  version.json
webapp-frontend/scripts/: update-sw-version.js
webapp-frontend/src/: App.vue  main.js  registerServiceWorker.js
webapp-frontend/src/api/: index.js
webapp-frontend/src/components/: AdminInviteCodeDialog.vue  BindAccountDialog.vue  BindLineDialog.vue  BottomMenu.vue  CreditsTransferDialog.vue  DonationDialog.vue  DonationManagementDialog.vue  DonationRegistrationManagementDialog.vue  EmbyLineSelector.vue  InviteCodeDialog.vue  LineManagementDialog.vue  LuckyWheel.vue  NsfwDialog.vue  PlexLineSelector.vue  PremiumUnlockDialog.vue  RandomnessConfigDialog.vue  RedeemCodeDialog.vue  TagManagementDialog.vue  WheelAdminPanel.vue
webapp-frontend/src/router/: index.js
webapp-frontend/src/services/: adminLineService.js  adminService.js  adminTagService.js  auctionService.js  creditsService.js  cryptoDonationService.js  donationService.js  embyService.js  inviteCodeService.js  lineService.js  mediaServiceApi.js  nsfwService.js  plexService.js  premiumService.js  systemService.js  trafficService.js  (+2 more)
(+31 files in other folders)
